--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2000-05-25  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.old-deja/g++.abi/ptrflags.C: Use __pbase_type_info.
+
+2000-05-25  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* g++.old-deja/g++.eh/catch11.C: New test.
 	* g++.old-deja/g++.eh/catch12.C: New test.
 
