--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -7552,7 +7552,7 @@
     }
 }")
 
-(define_insn ""
+(define_insn "*movsi_internal1"
   [(set (match_operand:SI 0 "nonimmediate_operand" "=r,r,r,m,r,r,r,r,r,*q,*c*l,*h")
 	(match_operand:SI 1 "input_operand" "r,U,m,r,I,L,n,R,*h,r,r,0"))]
   "gpc_reg_operand (operands[0], SImode)
@@ -7592,7 +7592,7 @@
   operands[3] = GEN_INT (INTVAL (operands[1]) & 0xffff);
 }")
 
-(define_insn ""
+(define_insn "*movsi_internal2"
   [(set (match_operand:CC 2 "cc_reg_operand" "=x,?y")
 	(compare:CC (match_operand:SI 1 "gpc_reg_operand" "r,r")
 		    (const_int 0)))
@@ -8182,7 +8182,7 @@
     }
 }")
 
-(define_insn "*movdi_32"
+(define_insn "*movdi_internal32"
   [(set (match_operand:DI 0 "nonimmediate_operand" "=r,r,m,f,f,m,r,r,r,r,r")
 	(match_operand:DI 1 "input_operand" "r,m,r,f,m,f,IJK,n,G,H,F"))]
   "! TARGET_POWERPC64
@@ -8264,7 +8264,7 @@
   operands[5] = GEN_INT (CONST_DOUBLE_LOW  (operands[1]));
 }")
 
-(define_insn "*movdi_64"
+(define_insn "*movdi_internal64"
   [(set (match_operand:DI 0 "nonimmediate_operand" "=r,r,m,r,r,r,r,f,f,m,r,*h,*h")
 	(match_operand:DI 1 "input_operand" "r,m,r,I,L,nF,R,f,m,f,*h,r,0"))]
   "TARGET_POWERPC64
@@ -8494,7 +8494,7 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
 #endif
 }")
 
-(define_insn ""
+(define_insn "*movdi_internal2"
   [(set (match_operand:CC 2 "cc_reg_operand" "=x,?y")
 	(compare:CC (match_operand:DI 1 "gpc_reg_operand" "r,r")
 		    (const_int 0)))
@@ -8505,7 +8505,7 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
    #"
   [(set_attr "type" "compare")
    (set_attr "length" "4,8")])
-
+
 (define_split
   [(set (match_operand:CC 2 "cc_reg_not_cr0_operand" "")
 	(compare:CC (match_operand:DI 1 "gpc_reg_operand" "")
@@ -8517,7 +8517,7 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
 	(compare:CC (match_dup 0)
 		    (const_int 0)))]
   "")
-
+
 ;; TImode is similar, except that we usually want to compute the address into
 ;; a register and use lsi/stsi (the exception is during reload).  MQ is also
 ;; clobbered in stsi for POWER, so we need a SCRATCH for it.
@@ -10682,7 +10682,7 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
 }")
 
 ;; Here are the actual compare insns.
-(define_insn ""
+(define_insn "*cmpsi_internal1"
   [(set (match_operand:CC 0 "cc_reg_operand" "=y")
 	(compare:CC (match_operand:SI 1 "gpc_reg_operand" "r")
 		    (match_operand:SI 2 "reg_or_short_operand" "rI")))]
@@ -10690,7 +10690,7 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
   "{cmp%I2|cmpw%I2} %0,%1,%2"
   [(set_attr "type" "compare")])
 
-(define_insn ""
+(define_insn "*cmpdi_internal1"
   [(set (match_operand:CC 0 "cc_reg_operand" "=y")
 	(compare:CC (match_operand:DI 1 "gpc_reg_operand" "r")
 		    (match_operand:DI 2 "reg_or_short_operand" "rI")))]
@@ -10726,7 +10726,7 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
   operands[5] = GEN_INT (sextc);
 }")
 
-(define_insn ""
+(define_insn "*cmpsi_internal2"
   [(set (match_operand:CCUNS 0 "cc_reg_operand" "=y")
 	(compare:CCUNS (match_operand:SI 1 "gpc_reg_operand" "r")
 		       (match_operand:SI 2 "reg_or_u_short_operand" "rK")))]
@@ -10734,7 +10734,7 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
   "{cmpl%I2|cmplw%I2} %0,%1,%W2"
   [(set_attr "type" "compare")])
 
-(define_insn ""
+(define_insn "*cmpdi_internal2"
   [(set (match_operand:CCUNS 0 "cc_reg_operand" "=y")
 	(compare:CCUNS (match_operand:DI 1 "gpc_reg_operand" "r")
 		       (match_operand:DI 2 "reg_or_u_short_operand" "rK")))]
@@ -10787,7 +10787,7 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
   [(set (match_dup 3) (compare:CCUNS (match_dup 1) (match_dup 2)))
    (set (match_dup 0) (plus:SI (match_dup 1) (match_dup 4)))])
 
-(define_insn ""
+(define_insn "*cmpsf_internal1"
   [(set (match_operand:CCFP 0 "cc_reg_operand" "=y")
 	(compare:CCFP (match_operand:SF 1 "gpc_reg_operand" "f")
 		      (match_operand:SF 2 "gpc_reg_operand" "f")))]
@@ -10795,7 +10795,7 @@ operands[2] = GEN_INT (INTVAL (operands[1]) >> 32);
   "fcmpu %0,%1,%2"
   [(set_attr "type" "fpcompare")])
 
-(define_insn ""
+(define_insn "*cmpdf_internal1"
   [(set (match_operand:CCFP 0 "cc_reg_operand" "=y")
 	(compare:CCFP (match_operand:DF 1 "gpc_reg_operand" "f")
 		      (match_operand:DF 2 "gpc_reg_operand" "f")))]
