--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-25  Richard Henderson  <rth@cygnus.com>
+
+	* flow.c (mark_set_1): Don't record conditionally dead memory.
+
 2000-05-25  Jan Hubicka  <jh@suse.cz>
 
 	* combine.c (try_combine): Use any_condjump_p, any_uncondjump_p
