--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-25  Mark Mitchell  <mark@codesourcery.com>
+
+	* recog.c (peephole2_optimize): Use INSN_P.
+
 2000-05-25  Richard Henderson  <rth@cygnus.com>
 
 	* ifcvt.c (seq_contains_jump): New.
