--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2000-05-25  Tom Tromey  <tromey@cygnus.com>
+
+	* parse.y (array_constructor_check_entry): Pass `wfl_value', not
+	`wfl_operator', to maybe_build_primttype_type_ref.
+	Fixes PR gcj/235.
+
 2000-05-01  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
 	* parse.y (resolve_package): Correctly set `*next' (was off by
