--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-25  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* cpplex.c (maybe_macroexpand): Warn about function-like
+	macros used in non-function context, if -Wtraditional.
+
 2000-05-25  Mark Mitchell  <mark@codesourcery.com>
 
 	* recog.c (peephole2_optimize): Use INSN_P.
