--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-25  Alexandre Oliva  <aoliva@cygnus.com>
+
+	* gcc.c-torture/compile/20000523-1.c: New test.
+
 2000-05-25  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.old-deja/g++.abi/ptrflags.C: Use __pbase_type_info.
