--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-25  J. David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* vax.h (CPP_SPEC): Define __GFLOAT and GFLOAT when -mg is specified.
+
 2000-05-25  Richard Henderson  <rth@cygnus.com>
 
 	* bb-reorder.c (reorder_block_def): Reorder elements for size.
