* decl2.c (grokclassfn): Set DECL_LANGUAGE here. 	* method.c (implicitly_declare_fn): Not here.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34194 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-26  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl2.c (grokclassfn): Set DECL_LANGUAGE here.
+	* method.c (implicitly_declare_fn): Not here.
+
 2000-05-26  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* cp-tree.h (CPTI_PTMD_DESC_TYPE): Rename to ...
