* class.c (build_vtable_entry_ref): Correct usage of 	get_vtbl_decl_for_binfo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34195 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,8 @@
 2000-05-26  Mark Mitchell  <mark@codesourcery.com>
 
+	* class.c (build_vtable_entry_ref): Correct usage of
+	get_vtbl_decl_for_binfo.
+
 	* decl2.c (grokclassfn): Set DECL_LANGUAGE here.
 	* method.c (implicitly_declare_fn): Not here.
 
