2000-05-26  Zack Weinberg  <zack@wolery.cumb.org>
	* java/parse.y (find_applicable_accessible_methods_list):
	Don't add an uninitialized value to the list.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34196 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-26  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* java/parse.y (find_applicable_accessible_methods_list):
+	Don't add an uninitialized value to the list.
+
 2000-05-25  Tom Tromey  <tromey@cygnus.com>
 
 	* parse.y (resolve_field_access): Don't check DECL_LANG_SPECIFIC
