--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -2642,7 +2642,7 @@
 (define_expand "iorsi3"
   [(set (match_operand:SI 0 "gpc_reg_operand" "")
 	(ior:SI (match_operand:SI 1 "gpc_reg_operand" "")
-		(match_operand:SI 2 "reg_or_cint_operand" "")))]
+		(match_operand:SI 2 "reg_or_logical_cint_operand" "")))]
   ""
   "
 {
@@ -2663,7 +2663,7 @@
 (define_expand "xorsi3"
   [(set (match_operand:SI 0 "gpc_reg_operand" "")
 	(xor:SI (match_operand:SI 1 "gpc_reg_operand" "")
-		(match_operand:SI 2 "reg_or_cint_operand" "")))]
+		(match_operand:SI 2 "reg_or_logical_cint_operand" "")))]
   ""
   "
 {
@@ -2683,7 +2683,7 @@
 
 (define_insn "*boolsi3_internal1"
   [(set (match_operand:SI 0 "gpc_reg_operand" "=r,r,r")
-	(match_operator:SI 3 "boolean_operator"
+	(match_operator:SI 3 "boolean_or_operator"
 	 [(match_operand:SI 1 "gpc_reg_operand" "%r,r,r")
 	  (match_operand:SI 2 "logical_operand" "r,K,L")]))]
   ""
@@ -2694,7 +2694,7 @@
 
 (define_insn "*boolsi3_internal2"
   [(set (match_operand:CC 0 "cc_reg_operand" "=x,?y")
-	(compare:CC (match_operator:SI 4 "boolean_operator"
+	(compare:CC (match_operator:SI 4 "boolean_or_operator"
 	 [(match_operand:SI 1 "gpc_reg_operand" "%r,r")
 	  (match_operand:SI 2 "gpc_reg_operand" "r,r")])
 	 (const_int 0)))
@@ -2755,7 +2755,7 @@
 
 (define_split
   [(set (match_operand:SI 0 "gpc_reg_operand" "")
-	(match_operator:SI 3 "boolean_operator"
+	(match_operator:SI 3 "boolean_or_operator"
 	 [(match_operand:SI 1 "gpc_reg_operand" "")
 	  (match_operand:SI 2 "non_logical_cint_operand" "")]))]
   ""
@@ -7060,7 +7060,7 @@
 (define_expand "iordi3"
   [(set (match_operand:DI 0 "gpc_reg_operand" "")
 	(ior:DI (match_operand:DI 1 "gpc_reg_operand" "")
-		(match_operand:DI 2 "reg_or_cint_operand" "")))]
+		(match_operand:DI 2 "reg_or_logical_cint_operand" "")))]
   "TARGET_POWERPC64"
   "
 {
@@ -7092,7 +7092,7 @@
 (define_expand "xordi3"
   [(set (match_operand:DI 0 "gpc_reg_operand" "")
 	(xor:DI (match_operand:DI 1 "gpc_reg_operand" "")
-		(match_operand:DI 2 "reg_or_cint_operand" "")))]
+		(match_operand:DI 2 "reg_or_logical_cint_operand" "")))]
   "TARGET_POWERPC64"
   "
 {
@@ -7123,7 +7123,7 @@
 
 (define_insn "*booldi3_internal1"
   [(set (match_operand:DI 0 "gpc_reg_operand" "=r,r,r")
-	(match_operator:DI 3 "boolean_operator"
+	(match_operator:DI 3 "boolean_or_operator"
 	 [(match_operand:DI 1 "gpc_reg_operand" "%r,r,r")
 	  (match_operand:DI 2 "logical_operand" "r,K,JF")]))]
   "TARGET_POWERPC64"
@@ -7134,7 +7134,7 @@
 
 (define_insn "*booldi3_internal2"
   [(set (match_operand:CC 0 "cc_reg_operand" "=x,?y")
-	(compare:CC (match_operator:DI 4 "boolean_operator"
+	(compare:CC (match_operator:DI 4 "boolean_or_operator"
 	 [(match_operand:DI 1 "gpc_reg_operand" "%r,r")
 	  (match_operand:DI 2 "gpc_reg_operand" "r,r")])
 	 (const_int 0)))
@@ -7195,7 +7195,7 @@
 
 (define_split
   [(set (match_operand:DI 0 "gpc_reg_operand" "")
-	(match_operator:DI 3 "boolean_operator"
+	(match_operator:DI 3 "boolean_or_operator"
 	 [(match_operand:DI 1 "gpc_reg_operand" "")
 	  (match_operand:DI 2 "non_logical_cint_operand" "")]))]
   "TARGET_POWERPC64"
@@ -7230,7 +7230,7 @@
 	 [(not:DI (match_operand:DI 1 "gpc_reg_operand" "r"))
 	  (match_operand:DI 2 "logical_operand" "r")]))]
   "TARGET_POWERPC64"
-  "%q3 %0,%1,%2")
+  "%q3 %0,%2,%1")
 
 (define_insn "*boolcdi3_internal2"
   [(set (match_operand:CC 0 "cc_reg_operand" "=x,?y")
@@ -7241,7 +7241,7 @@
    (clobber (match_scratch:DI 3 "=r,r"))]
   "TARGET_POWERPC64"
   "@
-   %q4. %3,%1,%2
+   %q4. %3,%2,%1
    #"
   [(set_attr "type" "compare")
    (set_attr "length" "4,8")])
@@ -7270,7 +7270,7 @@
 	(match_dup 4))]
   "TARGET_POWERPC64"
   "@
-   %q4. %0,%1,%2
+   %q4. %0,%2,%1
    #"
   [(set_attr "type" "compare")
    (set_attr "length" "4,8")])
