* config/rs6000/rs6000.md (movsi_internal1): Use '%a1' rather than '%1(%*)'. (movdi_internal64): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34201 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -7565,7 +7565,7 @@
    {lil|li} %0,%1
    {liu|lis} %0,%v1
    #
-   {cal|la} %0,%1(%*)
+   {cal|la} %0,%a1
    mf%1 %0
    mt%0 %1
    mt%0 %1
@@ -7820,7 +7820,7 @@
    {st%U0%X0|stw%U0%X0} %1,%0
    {lil|li} %0,%1
    {liu|lis} %0,%v1
-   {cal|la} %0,%1(%*)
+   {cal|la} %0,%a1
    #
    #"
   [(set_attr "type" "*,load,store,*,*,*,*,*")
@@ -8277,7 +8277,7 @@
    li %0,%1
    lis %0,%v1
    #
-   {cal|la} %0,%1(%*)
+   {cal|la} %0,%a1
    fmr %0,%1
    lfd%U1%X1 %0,%1
    stfd%U0%X0 %1,%0
